--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  La visión diurna de los pavos reales es tres veces mejor que la del humano. Cuenta con una visión de 270° grados y, además, es capaz de percibir el color.  <BR></BR>
+                  La visión diurna de los <b>pavos reales</b> es tres veces mejor que la del humano. Cuenta con una visión de 270° grados y, además, es capaz de percibir el color.  <BR></BR>
                   <img src="https://cdn0.bioenciclopedia.com/es/posts/8/3/1/pavo_real_138_600.jpg" alt="" class="imagen">
                 </div>
               </div>
